[package]
name = "power-rules-daemon"
version = "0.0.1"
edition = "2024"
authors = ["Your Name <adrian3d.art@gmail.com>"]
description = "A daemon for managing power-related rules and events."
license = "GPL-3.0-only	"
repository = "https://github.com/zeioth/power-rules-daemon"
keywords = ["daemon", "power-management", "rules", "automation"]
categories = ["games", "config"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
procfs = "0.16.0"
toml = "0.8"
